8199793: [Graal] runtime/CommandLine/PrintTouchedMethods.java crashes with assertion "reference count underflow for symbol"

Remove Symbol::set_permanent to avoid possible race conditions

Reviewed-by: coleenp, dholmes, thartmann